<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_parent_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/master_red">

    <!--animation-->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/login_animation_view_id"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_colorFilter="@color/theme_primary"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/login_animation" />
    <!--end-->

    <!--email feild-->
    <AutoCompleteTextView
        android:id="@+id/email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/master_red_with_opacity"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/theme_primary"
        android:textColorHint="@color/login_hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_animation_view_id" />
    <!--end-->

    <!--password-->
    <AutoCompleteTextView
        android:id="@+id/password_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/master_red_with_opacity"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/theme_primary"
        android:textColorHint="@color/login_hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_id" />
    <!--end-->

    <!--error message-->
    <TextView
        android:id="@+id/error_message_login_id"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:gravity="left"
        android:maxLines="2"
        android:textColor="@color/theme_primary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/owner_id" />
    <!--end-->

    <!--login btn-->
    <Button
        android:id="@+id/login_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@color/theme_primary"
        android:text="@string/login"
        android:textColor="@color/master_red"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_message_login_id" />
    <!--end-->

    <!--signUp btn-->
    <TextView
        android:id="@+id/signUp_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/signUp"
        android:background="@color/master_red"
        android:textColor="@color/theme_primary"
        android:textStyle="bold"
        android:textSize="14sp"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_id" />
    <!--end-->

    <!--or divider-->

    <!--end-->


    <!--sign in with another email-->

    <CheckBox
        android:id="@+id/owner_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/theme_primary"
        android:textSize="16sp"
        android:text="@string/owner_check_box"
        android:textStyle="bold"
        android:checked="false"
        android:padding="10dp"
        android:buttonTint="@color/theme_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_id" />
    <!--end-->


</android.support.constraint.ConstraintLayout>